--- a/responsive.scss
+++ b/responsive.scss
@@ -92,19 +92,20 @@
   .miExperienciaArea {
     margin-top: 70px;
     .miExperienciaInner {
-      padding-top: 67px;
+      padding-top: 75px;
       p {
         padding: 0 20px;
       }
     }
   }
 
-  .blografiaArea {
-    margin-top: 70px;
-  }
+ 
 
   .blografiaArea {
+    margin-top: 70px;
+    height: 320px;
     .blografiaInner {
+      padding-top: 42px;
       .socialIcons {
         ul {
           padding: 0;
