--- a/style.css
+++ b/style.css
@@ -238,5 +238,7 @@ p {
   color: #fff;
   margin-bottom: 0;
   padding-top: 5px;
+  font-size: 15px;
+  font-weight: 300;
 }
 /*# sourceMappingURL=style.css.map */
