--- a/responsive.scss
+++ b/responsive.scss
@@ -50,6 +50,7 @@
   }
   .headerMain {
     .headerInner {
+      padding-top: 145px;
       .profileCard {
         width: 250px;
         height: 250px;
@@ -98,8 +99,6 @@
       }
     }
   }
-
- 
 
   .blografiaArea {
     margin-top: 70px;
