--- a/style.scss
+++ b/style.scss
@@ -165,9 +165,12 @@ p {
 
 // map
 .map {
-  background-image: url(./image/map.png);
-  height: 400px;
+  // background-image: url(./image/map.png);
+  // height: 400px;
   //   margin-top: 100px;
+  img {
+    width: 100%;
+}
 }
 
 // blografiaArea
